--- a/GrupoEmpresarial-war/web/interfaz/establecimiento/itz-informe-establecimiento.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/establecimiento/itz-informe-establecimiento.xhtml
@@ -7,7 +7,7 @@
     <h:body>
         <ui:composition template="/plantilla/plantilla.xhtml">
             <ui:define name="content">
-                <h:form id="frmInfEstablecimiento" style="height: 88%;" >
+                <h:form id="frmInfEstablecimiento" style="height: 88%; padding-right: 2%; padding-left: 2%;" >
                     <p:growl id="msnInforUnidadLegal" showDetail="true" />
                     <h3 class="titulo-center-h3">INFORMACIÓN DE LOS ESTABLECIMIENTOS</h3>
                     <!--p:media value="#{MbReporteEstablecimiento.contenido}" cache="false" width="100%" height="100%" player="pdf"/-->
