--- a/GrupoEmpresarial-war/web/interfaz/grupo-empresa/componente/cpt-formulario-resumen.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/grupo-empresa/componente/cpt-formulario-resumen.xhtml
@@ -5,133 +5,137 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:ui="http://java.sun.com/jsf/facelets">
 
-    <p:panel header="Confirmar información" >
+    <p:panel>
         <h:panelGrid id="confirmation" columns="1" style="width: 100%;">
             <h4 class="titulo-center-h3">Información de Identificación</h4>
-            <h:panelGrid columns="2" columnClasses="label, value">
+            <!--p:separator /-->
+            <h:panelGrid columns="2" columnClasses="etiquetaFormularioReporte, valorEtiquetaFormularioReporte" style="width: 100%;">
 
-                <p:outputLabel value="Nombre Comercial:" styleClass="etiquetaFormulario"/>
+                <p:outputLabel value="Nombre Comercial:" />
                 <p:outputLabel value="#{MbFormGrupoEmpresa.identificacionSeleccionada.nombreComercial}"/>
 
-                <p:outputLabel value="Nombre registrado:" styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormGrupoEmpresa.identificacionSeleccionada.nombreRegistrado}"/>
+                <p:outputLabel value="Nombre registrado:" />
+                <p:outputLabel value="#{MbFormGrupoEmpresa.identificacionSeleccionada.nombreRegistrado}" />
 
-                <p:outputLabel value="NIT:" styleClass="etiquetaFormulario"/>
+                <p:outputLabel value="Presidente: " />
+                <p:outputLabel value="#{MbFormGrupoEmpresa.identificacionSeleccionada.representanteLegal}" />
+
+                <p:outputLabel value="Tipo de conglomerado: " />
+                <p:outputLabel value="#{MbFormGrupoEmpresa.relacionSeleccionada.tipoCongromelado}" />
+
+                <p:outputLabel value="Situación de control: " />
+                <p:outputLabel value="#{MbFormGrupoEmpresa.relacionSeleccionada.situacionControl}" />
+
+                <p:outputLabel value="Tipo de control: " />
+                <p:outputLabel value="#{MbFormGrupoEmpresa.relacionSeleccionada.tipoControl}" />
+
+                <p:outputLabel value="Tipo de empresa (controlante): " />
+                <p:outputLabel value="#{MbFormGrupoEmpresa.relacionSeleccionada.tipoEmpresaControlante}" />
+
+                <p:outputLabel value="Consorcios - Uniones temporales: " />
+                <p:outputLabel value="#{MbFormGrupoEmpresa.relacionSeleccionada.consorcioUnidadesTempGe==true?'SI':'NO'}" />
+
+                <p:outputLabel value="País de la controlante: " />
+                <p:outputLabel value="#{MbFormGrupoEmpresa.relacionSeleccionada.paisControlante}" />
+
+                <p:outputLabel value="Página web: " />
+                <p:outputLabel value="#{MbFormGrupoEmpresa.identificacionSeleccionada.paginaWeb}" />
+
+
+
+                <p:outputLabel value="NIT:"/>
                 <p:outputLabel value="#{MbFormGrupoEmpresa.identificacionSeleccionada.nit}"/>
 
-                <p:outputLabel value="DV:" styleClass="etiquetaFormulario"/>
+                <p:outputLabel value="DV:"/>
                 <p:outputLabel value="#{MbFormGrupoEmpresa.identificacionSeleccionada.digitoVerificacion}"/>
 
-                <p:outputLabel value="Página web: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormGrupoEmpresa.identificacionSeleccionada.paginaWeb}"/>
-
-                <p:outputLabel value="Presidente: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormGrupoEmpresa.identificacionSeleccionada.representanteLegal}"/>
-
-                <p:outputLabel value="Departamento sede principal: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormGrupoEmpresa.identificacionSeleccionada.departamento}"/>
-
-                <p:outputLabel value="Ciudad sede principal: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormGrupoEmpresa.identificacionSeleccionada.municipio}"/>
-
-                <p:outputLabel value="Dirección sede principal: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormGrupoEmpresa.identificacionSeleccionada.direccion}"/>
-
-                <p:outputLabel value="Indicativo sede principal: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormGrupoEmpresa.identificacionSeleccionada.indicativo}"/>
-
-                <p:outputLabel value="Teléfono sede principal: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormGrupoEmpresa.identificacionSeleccionada.telefono}"/>
-
-                <p:outputLabel value="Tipo de conglomerado: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormGrupoEmpresa.relacionSeleccionada.tipoCongromelado}"/>
-
-                <p:outputLabel value="Situación de control: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormGrupoEmpresa.relacionSeleccionada.situacionControl}"/>
-
-                <p:outputLabel value="Tipo de control: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormGrupoEmpresa.relacionSeleccionada.tipoControl}"/>
-
-                <p:outputLabel value="Tipo de empresa (controlante): " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormGrupoEmpresa.relacionSeleccionada.tipoEmpresaControlante}"/>
-
-                <p:outputLabel value="País de la controlante: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormGrupoEmpresa.relacionSeleccionada.paisControlante}"/>
-
-                <p:outputLabel value="Sucursales en el extranjero: " styleClass="etiquetaFormulario"/>
+                <p:outputLabel value="Sucursales en el extranjero: "/>
                 <p:outputLabel value="#{MbFormGrupoEmpresa.relacionSeleccionada.sucursalesExtranjeroGe==true?'SI':'NO'}"/>
 
-                <p:outputLabel value="Consorcios - Uniones temporales: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormGrupoEmpresa.relacionSeleccionada.consorcioUnidadesTempGe==true?'SI':'NO'}"/>
+                <p:outputLabel value="Departamento sede principal: "/>
+                <p:outputLabel value="#{MbFormGrupoEmpresa.identificacionSeleccionada.departamento}" />
+
+                <p:outputLabel value="Ciudad sede principal: "/>
+                <p:outputLabel value="#{MbFormGrupoEmpresa.identificacionSeleccionada.municipio}" />
+
+                <p:outputLabel value="Dirección sede principal: "/>
+                <p:outputLabel value="#{MbFormGrupoEmpresa.identificacionSeleccionada.direccion}"/>
+
+                <p:outputLabel value="Indicativo sede principal: "/>
+                <p:outputLabel value="#{MbFormGrupoEmpresa.identificacionSeleccionada.indicativo}"/>
+
+                <p:outputLabel value="Teléfono sede principal: "/>
+                <p:outputLabel value="#{MbFormGrupoEmpresa.identificacionSeleccionada.telefono}"/>
 
             </h:panelGrid>
 
             <h4 class="titulo-center-h3">Información de Contacto</h4>
-            <h:panelGrid columns="2" columnClasses="label, value">
-                <p:outputLabel value="Nombre de contacto: " styleClass="etiquetaFormulario"/>
+            <!--p:separator /-->
+            <h:panelGrid columns="2" columnClasses="etiquetaFormularioReporte, valorEtiquetaFormularioReporte" style="width: 100%;">
+                <p:outputLabel value="Nombre de contacto: " />
                 <p:outputLabel value="#{MbFormGrupoEmpresa.identificacionSeleccionada.nombreContacto}"/>
 
-                <p:outputLabel value="Cargo de contacto: " styleClass="etiquetaFormulario"/>
+                <p:outputLabel value="Cargo de contacto: " />
                 <p:outputLabel value="#{MbFormGrupoEmpresa.identificacionSeleccionada.cargoContacto}"/>
 
-                <p:outputLabel value="Teléfono contacto: " styleClass="etiquetaFormulario"/>
+                <p:outputLabel value="Teléfono contacto: " />
                 <p:outputLabel value="#{MbFormGrupoEmpresa.identificacionSeleccionada.telefono}"/>
 
-                <p:outputLabel value="Correo electrónico de contacto: " styleClass="etiquetaFormulario"/>
+                <p:outputLabel value="Correo electrónico de contacto: " />
                 <p:outputLabel value="#{MbFormGrupoEmpresa.identificacionSeleccionada.mailContacto}"/>
 
-                <p:outputLabel value="Nombre de contacto 2: " styleClass="etiquetaFormulario"/>
+                <p:outputLabel value="Nombre de contacto 2: " />
                 <p:outputLabel value="#{MbFormGrupoEmpresa.identificacionSeleccionada.nombreContacto2}"/>
 
-                <p:outputLabel value="Cargo de contacto 2: " styleClass="etiquetaFormulario"/>
+                <p:outputLabel value="Cargo de contacto 2: " />
                 <p:outputLabel value="#{MbFormGrupoEmpresa.identificacionSeleccionada.cargoContacto2}"/>
 
-                <p:outputLabel value="Teléfono de contacto 2: " styleClass="etiquetaFormulario"/>
+                <p:outputLabel value="Teléfono de contacto 2: " />
                 <p:outputLabel value="#{MbFormGrupoEmpresa.identificacionSeleccionada.telefonoContacto2}"/>
 
-                <p:outputLabel value="Correo electrónico de contacto 2: " styleClass="etiquetaFormulario"/>
+                <p:outputLabel value="Correo electrónico de contacto 2: " />
                 <p:outputLabel value="#{MbFormGrupoEmpresa.identificacionSeleccionada.mailContacto2}"/>
 
-                <p:outputLabel value="Nombre de contacto 3: " styleClass="etiquetaFormulario"/>
+                <p:outputLabel value="Nombre de contacto 3: " />
                 <p:outputLabel value="#{MbFormGrupoEmpresa.identificacionSeleccionada.nombreContacto3}"/>
 
-                <p:outputLabel value="Cargo de contacto 3: " styleClass="etiquetaFormulario"/>
+                <p:outputLabel value="Cargo de contacto 3: " />
                 <p:outputLabel value="#{MbFormGrupoEmpresa.identificacionSeleccionada.cargoContacto3}"/>
 
-                <p:outputLabel value="Teléfono de contacto 3: " styleClass="etiquetaFormulario"/>
+                <p:outputLabel value="Teléfono de contacto 3: " />
                 <p:outputLabel value="#{MbFormGrupoEmpresa.identificacionSeleccionada.telefonoContacto3}"/>
 
-                <p:outputLabel value="Correo electrónico de contacto 3: " styleClass="etiquetaFormulario"/>
+                <p:outputLabel value="Correo electrónico de contacto 3: " />
                 <p:outputLabel value="#{MbFormGrupoEmpresa.identificacionSeleccionada.mailContacto3}"/>
             </h:panelGrid>
 
             <!--h4 class="titulo-center-h3">Información de Historia</h4>
-            <h:panelGrid columns="2" columnClasses="label, value">
-                <p:outputLabel value="Estado: "  styleClass="etiquetaFormulario"/>
+            <h:panelGrid columns="2" columnClasses="etiquetaFormularioReporte, valorEtiquetaFormularioReporte">
+                <p:outputLabel value="Estado: "  />
                 <p:outputLabel value="#{MbFormGrupoEmpresa.novedadSeleccionada.estado}"/>
 
-                <p:outputLabel value="Fecha de configuración: " styleClass="etiquetaFormulario"/>
+                <p:outputLabel value="Fecha de configuración: " />
                 <p:outputLabel value="#{MbFormGrupoEmpresa.novedadSeleccionada.fechaConfiguracion}">
                     <f:convertDateTime pattern="dd/MM/yyyy"/>
                 </p:outputLabel>
 
-                <p:outputLabel value="Tipo de novedad: "  styleClass="etiquetaFormulario"/>
+                <p:outputLabel value="Tipo de novedad: "  />
                 <p:outputLabel value="#{MbFormGrupoEmpresa.novedadSeleccionada.tipoNovedad}"/>
 
-                <p:outputLabel value="Fecha de novedad: " styleClass="etiquetaFormulario"/>
+                <p:outputLabel value="Fecha de novedad: " />
                 <p:outputLabel value="#{MbFormGrupoEmpresa.novedadSeleccionada.fechaNovedad}">
                     <f:convertDateTime pattern="dd/MM/yyyy"/>
                 </p:outputLabel>
 
-                <p:outputLabel value="ID de grupo involucrado en la novedad: " styleClass="etiquetaFormulario"/>
+                <p:outputLabel value="ID de grupo involucrado en la novedad: " />
                 <p:outputLabel value="#{MbFormGrupoEmpresa.novedadSeleccionada.idGrupoNovedad}"/>
 
-                <p:outputLabel value="Fecha de cierre: " styleClass="etiquetaFormulario"/>
+                <p:outputLabel value="Fecha de cierre: " />
                 <p:outputLabel value="#{MbFormGrupoEmpresa.novedadSeleccionada.fechaCierre}">
                     <f:convertDateTime pattern="dd/MM/yyyy"/>
                 </p:outputLabel>
 
-                <p:outputLabel value="Fecha de liquidación: " styleClass="etiquetaFormulario"/>
+                <p:outputLabel value="Fecha de liquidación: " />
                 <p:outputLabel value="#{MbFormGrupoEmpresa.novedadSeleccionada.fechaLiquidacion}">
                     <f:convertDateTime pattern="dd/MM/yyyy"/>
                 </p:outputLabel>
@@ -139,39 +143,52 @@
             </h:panelGrid-->
 
             <h4 class="titulo-center-h3">Información de Tamaño</h4>
-            <h:panelGrid columns="2" columnClasses="label, value">
-                <p:outputLabel value="Activo: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormGrupoEmpresa.tamanoSeleccionado.activo}"/>
+            <!--p:separator /-->
+            <h:panelGrid columns="2" columnClasses="etiquetaFormularioReporte, valorEtiquetaFormularioReporte" style="width: 100%;">
+                <p:outputLabel value="Activo: " />
+                <p:outputLabel value="#{MbFormGrupoEmpresa.tamanoSeleccionado.activo}" style="display: block; text-align: right; width: 180px;">
+                    <f:convertNumber currencySymbol="$"  type="currency" locale="es_CO" minFractionDigits="0"/>
+                </p:outputLabel>
 
-                <p:outputLabel value="Pasivo: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormGrupoEmpresa.tamanoSeleccionado.pasivo}"/>
+                <p:outputLabel value="Pasivo: " />
+                <p:outputLabel value="#{MbFormGrupoEmpresa.tamanoSeleccionado.pasivo}"  style="display: block; text-align: right; width: 180px;">
+                    <f:convertNumber currencySymbol="$"  type="currency" locale="es_CO" minFractionDigits="0"/>
+                </p:outputLabel>
 
-                <p:outputLabel value="Patrimonio: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormGrupoEmpresa.tamanoSeleccionado.patrimonio}"/>
+                <p:outputLabel value="Patrimonio: " />
+                <p:outputLabel value="#{MbFormGrupoEmpresa.tamanoSeleccionado.patrimonio}"  style="display: block; text-align: right; width: 180px;">
+                    <f:convertNumber currencySymbol="$"  type="currency" locale="es_CO" minFractionDigits="0"/>
+                </p:outputLabel>
 
-                <p:outputLabel value="Ingresos operacionales: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormGrupoEmpresa.tamanoSeleccionado.ingresosOperacionales}"/>
+                <p:outputLabel value="Ingresos operacionales: " />
+                <p:outputLabel value="#{MbFormGrupoEmpresa.tamanoSeleccionado.ingresosOperacionales}"  style="display: block; text-align: right; width: 180px;">
+                    <f:convertNumber currencySymbol="$"  type="currency" locale="es_CO" minFractionDigits="0"/>
+                </p:outputLabel>
 
-                <p:outputLabel value="Gastos operacionales: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormGrupoEmpresa.tamanoSeleccionado.gastosOperacionales}"/>
+                <p:outputLabel value="Gastos operacionales: " />
+                <p:outputLabel value="#{MbFormGrupoEmpresa.tamanoSeleccionado.gastosOperacionales}"  style="display: block; text-align: right; width: 180px;">
+                    <f:convertNumber currencySymbol="$"  type="currency" locale="es_CO" minFractionDigits="0"/>
+                </p:outputLabel>
 
-                <p:outputLabel value="Utilidad neta: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormGrupoEmpresa.tamanoSeleccionado.utilidadNeta}"/>
+                <p:outputLabel value="Utilidad neta: " />
+                <p:outputLabel value="#{MbFormGrupoEmpresa.tamanoSeleccionado.utilidadNeta}"  style="display: block; text-align: right; width: 180px;">
+                    <f:convertNumber currencySymbol="$"  type="currency" locale="es_CO" minFractionDigits="0"/>
+                </p:outputLabel>
 
-                <p:outputLabel value="EBITDA: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormGrupoEmpresa.tamanoSeleccionado.ebitda}"/>
+                <p:outputLabel value="EBITDA: " />
+                <p:outputLabel value="#{MbFormGrupoEmpresa.tamanoSeleccionado.ebitda}"  style="display: block; text-align: right; width: 180px;"/>
 
-                <p:outputLabel value="Personal ocupado: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormGrupoEmpresa.tamanoSeleccionado.personalOcupado}"/>
+                <p:outputLabel value="Personal ocupado: " />
+                <p:outputLabel value="#{MbFormGrupoEmpresa.tamanoSeleccionado.personalOcupado}"  style="display: block; text-align: right; width: 180px;"/>
 
-                <p:outputLabel value="Número de hombres ocupados: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormGrupoEmpresa.tamanoSeleccionado.hombresOcupados}"/>
+                <p:outputLabel value="Número de hombres ocupados: " />
+                <p:outputLabel value="#{MbFormGrupoEmpresa.tamanoSeleccionado.hombresOcupados}"  style="display: block; text-align: right; width: 180px;"/>
 
-                <p:outputLabel value="Número de mujeres ocupados: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormGrupoEmpresa.tamanoSeleccionado.mujeresOcupadas}"/>
+                <p:outputLabel value="Número de mujeres ocupados: " />
+                <p:outputLabel value="#{MbFormGrupoEmpresa.tamanoSeleccionado.mujeresOcupadas}"  style="display: block; text-align: right; width: 180px;"/>
 
-                <p:outputLabel value="Observaciones: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormGrupoEmpresa.tamanoSeleccionado.observaciones}"/>
+                <!--p:outputLabel value="Observaciones: " />
+                <p:outputLabel value="#{MbFormGrupoEmpresa.tamanoSeleccionado.observaciones}"/-->
             </h:panelGrid>
 
         </h:panelGrid>
