--- a/GrupoEmpresarial-war/web/interfaz/grupo-empresa/itz-informe-grupo-empresa.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/grupo-empresa/itz-informe-grupo-empresa.xhtml
@@ -6,7 +6,11 @@
     <h:body>
         <ui:composition template="/plantilla/plantilla.xhtml">
             <ui:define name="content">
-                <h:form id="frmInfoGrupoEmpresa" style="height: 88%;" >
+                <p:dialog modal="true" widgetVar="statusDialog" header="Estado" draggable="false" closable="false" resizable="false" appendTo="@(body)">
+                    <p:graphicImage name="imagen/ajax-donwload.gif" />
+                </p:dialog>
+
+                <h:form id="frmInfoGrupoEmpresa" style="height: 88%; padding-right: 2%; padding-left: 2%;" >
                     <p:growl id="msnInforGruEmp" showDetail="true" />
                     <h3 class="titulo-center-h3">INFORMACIÓN DEL GRUPO EMPRESARIAL</h3>
                     <div class="ui-grid ui-grid-responsive">
@@ -34,32 +38,39 @@
                                 <p:commandButton value="Formulario" action="/interfaz/grupo-empresa/itz-formulario-grupo-empresa.xhtml" ajax="false"/>
                             </div>
                         </div>
-                        <!--div class="ui-grid-row">
+                        <div class="ui-grid-row">
                             <div class="ui-grid-col-12">
                                 <h4 class="titulo-left-h3">Actualizar información desde archivo XLS</h4>
                                 <p>En esta sección el usuario puede descargar un archivo XLS, que contiene la información del grupo empresarial, la cual podra
                                     actualizar de forma local y al terminar subir el archivo para actualizar los datos.</p>
                                 <p:commandButton id="btnGenerarXlsGrupoEmpresa" value="Generar Excel" ajax="false" 
                                                  actionListener="#{MbEscribirExcelGrupoEmpresa.generarArchivoXls(nerv['plantilla.grupoEmpresarial.path'],
-                                                                   nerv['plantilla.grupoEmpresarial.archivo'], MbLogin.usuarioLogueado.idIdentificacion,'GRUPO')}"
-                                                 onclick="PrimeFaces.monitorDownload(start, stop);" icon="ui-icon-arrowthick-1-s">
-                                    <p:fileDownload value="#{MbEscribirExcelGrupoEmpresa.file}" />
-                                </p:commandButton>
-                                <p>Subir el archivo con la ifnromación del grupo empresarial diligenciada para actualizar los datos.</p>
-                                <ui:include src="../utilidades/cpt-cargar-archivo-xls.xhtml">
-                                    <ui:param name="frmPadre" value="frmInfoGrupoEmpresa" />
-                                    <ui:param name="formulario" value="GRUPO" />
-                                </ui:include>
-                            </div>
-                        </div-->
+                                          nerv['plantilla.grupoEmpresarial.archivo'], MbLogin.usuarioLogueado.idIdentificacion,'GRUPO')}"
+                                                onclick="PrimeFaces.monitorDownload(start, stop);" icon="ui-icon-arrowthick-1-s">
+                                   <p:fileDownload value="#{MbEscribirExcelGrupoEmpresa.file}" />
+                               </p:commandButton>
+                               <p>Subir el archivo con la ifnromación del grupo empresarial diligenciada para actualizar los datos.</p>
+                               <ui:include src="../utilidades/cpt-cargar-archivo-xls.xhtml">
+                                   <ui:param name="frmPadre" value="frmInfoGrupoEmpresa" />
+                                   <ui:param name="formulario" value="GRUPO" />
+                               </ui:include>
+                           </div>
+                        </div>
                     </div>
 
                     <p:dialog id="dlgReportePdf" header="Reporte Grupo Empresa" widgetVar="dlg"  appendTo="@(body)"
                               resizable="false" modal="true" width="800" height="550">
                         <p:outputPanel deferred="true">
-                            <p:media value="#{MbReporteGrupoEmpresa.contenido}" cache="false" width="756" height="550" player="pdf" >
-                                Your browser can't display pdf
-                            </p:media>
+
+                                <p:media value="#{MbReporteGrupoEmpresa.contenido}" cache="false" width="756" height="525" player="pdf" >
+                                    Su navegador no puede visualizar pdf
+                                </p:media>
+                            <!--form>
+                                <p:commandButton value="Descargar Reporte" ajax="false" style="float: right;" 
+                                                 onclick="PrimeFaces.monitorDownload(start, stop);" icon="ui-icon-arrowthick-1-s">
+                                    <p:fileDownload value="#{MbFileDownloadView.descargarFile(MbReporteGrupoEmpresa.urlArchivoTemporal, MbReporteGrupoEmpresa.nombreArchivoTemporal)}" />
+                                </p:commandButton>
+                            </form-->
                         </p:outputPanel>
                     </p:dialog>
 
@@ -78,10 +89,15 @@
 
                 </h:form>
 
-                <p:dialog modal="true" widgetVar="statusDialog" header="Status" draggable="false" closable="false" resizable="false">
-                    <p:graphicImage name="imagen/ajax-donwload.gif" />
-                </p:dialog>
+                <script type="text/javascript">
+                    function start() {
+                        PF('statusDialog').show();
+                    }
 
+                    function stop() {
+                        PF('statusDialog').hide();
+                    }
+                </script>
             </ui:define>
         </ui:composition>
     </h:body>
