--- a/GrupoEmpresarial-war/web/interfaz/modulo/componente/cpt-formulario-modulo.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/modulo/componente/cpt-formulario-modulo.xhtml
@@ -18,7 +18,7 @@
         <div class="ui-grid ui-grid-responsive">
             <div class="ui-grid-row">
                 <div class="ui-grid-col-3">
-                    <p:outputLabel for="txtModulo" value="Modulo:" styleClass="etiquetaFormulario"/>
+                    <p:outputLabel for="txtModulo" value="Modulo:" styleClass="etiquetaFormularioAdministracion"/>
                 </div>
                 <div class="ui-grid-col-9">
                     <p:inputText id="txtModulo" value="#{MbAdministrarModulo.moduloSeleccionado.modulo}"  required="true" style="width: 90%;"/>        
@@ -26,7 +26,7 @@
             </div>
             <div class="ui-grid-row">
                 <div class="ui-grid-col-3">
-                    <p:outputLabel for="txtDescipcion" value="Descipción:" styleClass="etiquetaFormulario"/>
+                    <p:outputLabel for="txtDescipcion" value="Descipción:" styleClass="etiquetaFormularioAdministracion"/>
                 </div>
                 <div class="ui-grid-col-9">
                     <p:inputText id="txtDescipcion" value="#{MbAdministrarModulo.moduloSeleccionado.descripcion}"  required="true" style="width: 90%;"/>        
@@ -34,7 +34,7 @@
             </div>
             <div class="ui-grid-row">
                 <div class="ui-grid-col-3">
-                    <p:outputLabel value="Permisos:" styleClass="etiquetaFormulario"/>
+                    <p:outputLabel value="Permisos:" styleClass="etiquetaFormularioAdministracion"/>
                 </div>
                 <div class="ui-grid-col-9">
                     <p:selectCheckboxMenu id="ccCboMultSelePermisolId" value="#{MbAdministrarPermiso.listaPermisosSeleccionados}" 
@@ -45,7 +45,7 @@
             </div>             
             <div class="ui-grid-row">
                 <div class="ui-grid-col-3">
-                   <p:outputLabel value="" styleClass="etiquetaFormulario"/>
+                   <p:outputLabel value="" styleClass="etiquetaFormularioAdministracion"/>
                 </div>
                 <div class="ui-grid-col-9">
                     <p:commandButton value="Nuevo" update="formCptFormModulo:ccFormModuloId,#{ccLstModuloId}" 
