--- a/GrupoEmpresarial-war/web/interfaz/perfil/componente/cpt-formulario-perfil.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/perfil/componente/cpt-formulario-perfil.xhtml
@@ -18,7 +18,7 @@
         <div class="ui-grid ui-grid-responsive">
             <div class="ui-grid-row">
                 <div class="ui-grid-col-3">
-                    <p:outputLabel for="txtPerfil" value="Perfil:" styleClass="etiquetaFormulario"/>
+                    <p:outputLabel for="txtPerfil" value="Perfil:" styleClass="etiquetaFormularioAdministracion"/>
                 </div>
                 <div class="ui-grid-col-9">
                     <p:inputText id="txtPerfil" value="#{MbAdministrarPerfil.perfilSeleccionado.perfil}"  required="true" style="width: 90%;"/>        
@@ -26,7 +26,7 @@
             </div>
             <div class="ui-grid-row">
                 <div class="ui-grid-col-3">
-                    <p:outputLabel for="txtDescipcion" value="Descipción:" styleClass="etiquetaFormulario"/>
+                    <p:outputLabel for="txtDescipcion" value="Descipción:" styleClass="etiquetaFormularioAdministracion"/>
                 </div>
                 <div class="ui-grid-col-9">
                     <p:inputText id="txtDescipcion" value="#{MbAdministrarPerfil.perfilSeleccionado.descripcion}"  required="true" style="width: 90%;"/>        
@@ -34,7 +34,7 @@
             </div>
             <div class="ui-grid-row">
                 <div class="ui-grid-col-3">
-                    <p:outputLabel value="Permisos:" styleClass="etiquetaFormulario"/>
+                    <p:outputLabel value="Permisos:" styleClass="etiquetaFormularioAdministracion"/>
                 </div>
                 <div class="ui-grid-col-9">
                     <p:selectCheckboxMenu id="ccCboMultSelePermisolId" value="#{MbAdministrarPermiso.listaPermisosSeleccionados}" 
@@ -45,7 +45,7 @@
             </div>             
             <div class="ui-grid-row">
                 <div class="ui-grid-col-3">
-                   <p:outputLabel value="" styleClass="etiquetaFormulario"/>
+                   <p:outputLabel value="" styleClass="etiquetaFormularioAdministracion"/>
                 </div>
                 <div class="ui-grid-col-9">
                     <p:commandButton value="Nuevo" update="formCptFormPerfil:ccFormPerfilId,#{ccLstPerfilId}" 
