--- a/GrupoEmpresarial-war/web/interfaz/permiso/componente/cpt-formulario-permiso.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/permiso/componente/cpt-formulario-permiso.xhtml
@@ -18,7 +18,7 @@
         <div class="ui-grid ui-grid-responsive">
             <div class="ui-grid-row">
                 <div class="ui-grid-col-3">
-                    <p:outputLabel for="txtPermiso" value="Permiso:" styleClass="etiquetaFormulario"/>
+                    <p:outputLabel for="txtPermiso" value="Permiso:" styleClass="etiquetaFormularioAdministracion"/>
                 </div>
                 <div class="ui-grid-col-9">
                     <p:inputText id="txtPermiso" value="#{MbAdministrarPermiso.permisoSeleccionado.permiso}"  required="true" style="width: 90%;"/>
@@ -26,7 +26,7 @@
             </div>
             <div class="ui-grid-row">
                 <div class="ui-grid-col-3">
-                    <p:outputLabel for="txtDescipcion" value="Descipción:" styleClass="etiquetaFormulario"/>
+                    <p:outputLabel for="txtDescipcion" value="Descipción:" styleClass="etiquetaFormularioAdministracion"/>
                 </div>
                 <div class="ui-grid-col-9">
                     <p:inputText id="txtDescipcion" value="#{MbAdministrarPermiso.permisoSeleccionado.descripcion}"  required="true" style="width: 90%;"/>
@@ -34,7 +34,7 @@
             </div>
             <div class="ui-grid-row">
                 <div class="ui-grid-col-3">
-                    <p:outputLabel for="txtUrl" value="Url:" styleClass="etiquetaFormulario"/>
+                    <p:outputLabel for="txtUrl" value="Url:" styleClass="etiquetaFormularioAdministracion"/>
                 </div>
                 <div class="ui-grid-col-9">
                     <p:inputText id="txtUrl" value="#{MbAdministrarPermiso.permisoSeleccionado.url}"  required="false" style="width: 90%;"/>
@@ -42,7 +42,7 @@
             </div>
             <div class="ui-grid-row">
                 <div class="ui-grid-col-3">
-                    <p:outputLabel for="txtComando" value="Comando:" styleClass="etiquetaFormulario"/>
+                    <p:outputLabel for="txtComando" value="Comando:" styleClass="etiquetaFormularioAdministracion"/>
                 </div>
                 <div class="ui-grid-col-9">
                     <p:inputText id="txtComando" value="#{MbAdministrarPermiso.permisoSeleccionado.comando}"  required="false" style="width: 90%;"/>
@@ -50,7 +50,7 @@
             </div>  
             <div class="ui-grid-row">
                 <div class="ui-grid-col-3">
-                    <p:outputLabel for="txtActualizar" value="Actualizar:" styleClass="etiquetaFormulario"/>
+                    <p:outputLabel for="txtActualizar" value="Actualizar:" styleClass="etiquetaFormularioAdministracion"/>
                 </div>
                 <div class="ui-grid-col-9">
                     <p:inputText id="txtActualizar" value="#{MbAdministrarPermiso.permisoSeleccionado.actualizar}" required="false" style="width: 90%;"/>
@@ -58,7 +58,7 @@
             </div>  
             <div class="ui-grid-row">
                 <div class="ui-grid-col-3">
-                    <p:outputLabel for="txtAjax" value="Ajax:" styleClass="etiquetaFormulario"/>
+                    <p:outputLabel for="txtAjax" value="Ajax:" styleClass="etiquetaFormularioAdministracion"/>
                 </div>
                 <div class="ui-grid-col-9">
                     <p:inputText id="txtAjax" value="#{MbAdministrarPermiso.permisoSeleccionado.ajax}" required="false" style="width: 90%;"/>
@@ -66,7 +66,7 @@
             </div>
             <div class="ui-grid-row">
                 <div class="ui-grid-col-3">
-                    <p:outputLabel for="swtVisible" value="Visible:" styleClass="etiquetaFormulario"/>
+                    <p:outputLabel for="swtVisible" value="Visible:" styleClass="etiquetaFormularioAdministracion"/>
                 </div>
                 <div class="ui-grid-col-9">
                     <p:inputSwitch id="swtVisible" value="#{MbAdministrarPermiso.permisoSeleccionado.visible}" />
@@ -74,7 +74,7 @@
             </div>
             <div class="ui-grid-row">
                 <div class="ui-grid-col-3">
-                   <p:outputLabel value="" styleClass="etiquetaFormulario"/>
+                   <p:outputLabel value="" styleClass="etiquetaFormularioAdministracion"/>
                 </div>
                 <div class="ui-grid-col-9">
                     <p:commandButton value="Nuevo" update="formCptFormPermiso:ccFormPermisoId,#{ccLstPermisoId}" 
