--- a/GrupoEmpresarial-war/web/interfaz/unidad-legal/itz-formulario-unidad-legal.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/unidad-legal/itz-formulario-unidad-legal.xhtml
@@ -6,30 +6,36 @@
     <h:body>
         <ui:composition template="/plantilla/plantilla.xhtml">
             <ui:define name="content">
-                <h:form>
+                <h:form style="padding-right: 2%; padding-left: 2%;">
                     <h3 class="titulo-center-h3">FORMULARIO DE ACTUALIZACIÓN DE LA UNIDAD LEGAL</h3>
+                    <p:spacer  height="10"/>
                     <p:growl id="gwFormUnidadLegal" sticky="true" showDetail="true" life="6000" />
 
                     <p:wizard flowListener="#{MbFormUnidadLegal.onFlowProcess}" backLabel="anterior" nextLabel="siguiente">
 
-                        <p:tab id="identificacion" title="Identificación">
+                        <p:tab id="identificacion" title="Información de indentificación">
                             <ui:include src="componente/cpt-formulario-identificacion.xhtml"/>
+                            <hr class="lineaGradian"/>
                         </p:tab>
 
-                        <p:tab id="relacion" title="Relación">
+                        <p:tab id="relacion" title="Información de relación">
                             <ui:include src="componente/cpt-formulario-relacion.xhtml"/>
+                            <hr class="lineaGradian"/>
                         </p:tab>
 
-                        <p:tab id="historia" title="Historia">
+                        <p:tab id="historia" title="Información de historia">
                             <ui:include src="componente/cpt-formulario-historia.xhtml"/>
+                            <hr class="lineaGradian"/>
                         </p:tab>
 
-                        <p:tab id="tamano" title="Tamaño">
+                        <p:tab id="tamano" title="Información de tamaño">
                             <ui:include src="componente/cpt-formulario-tamano.xhtml"/>
+                            <hr class="lineaGradian"/>
                         </p:tab>
 
-                        <p:tab id="confirm" title="Confirmar">
+                        <p:tab id="confirm" title="Confirmar datos">
                             <ui:include src="componente/cpt-formulario-resumen.xhtml"/>
+                            <hr class="lineaGradian"/>
                             <p:commandButton value="Actualizar Datos" action="#{MbFormUnidadLegal.actualizarUnidadLegal}" style="float: right; top: 3px;">
                                 <p:confirm header="Confirmación" icon="ui-icon-alert" message="Esta a punto de actualizar la información, desea continuar?"/>
                             </p:commandButton>
