--- a/GrupoEmpresarial-war/web/interfaz/usuario/componente/cpt-formulario-perfil-usuario.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/usuario/componente/cpt-formulario-perfil-usuario.xhtml
@@ -16,7 +16,7 @@
             <div class="ui-grid ui-grid-responsive">
                 <div class="ui-grid-row">
                     <div class="ui-grid-col-3">
-                        <p:outputLabel value="Perfil" styleClass="etiquetaFormulario"/>
+                        <p:outputLabel value="Perfil" styleClass="etiquetaFormularioAdministracion"/>
                     </div>
                     <div class="ui-grid-col-9">
                         <p:inputText id="txtPerfil" value="#{MbLogin.usuarioLogueado.perfil.perfil}" disabled="true" style="width: 90%;"/>
@@ -24,7 +24,7 @@
                 </div>
                 <div class="ui-grid-row">
                     <div class="ui-grid-col-3">
-                        <p:outputLabel for="txtNickname" value="Usuario:" styleClass="etiquetaFormulario"/>
+                        <p:outputLabel for="txtNickname" value="Usuario:" styleClass="etiquetaFormularioAdministracion"/>
                     </div>
                     <div class="ui-grid-col-9">
                         <p:inputText id="txtNickname" value="#{MbLogin.usuarioLogueado.nickname}" disabled="true" style="width: 90%;"/>
@@ -32,7 +32,7 @@
                 </div>
                 <div class="ui-grid-row">
                     <div class="ui-grid-col-3">
-                        <p:outputLabel for="txtPassword" value="Contraseña:" styleClass="etiquetaFormulario"/>
+                        <p:outputLabel for="txtPassword" value="Contraseña:" styleClass="etiquetaFormularioAdministracion"/>
                     </div>
                     <div class="ui-grid-col-9">
                         <p:password id="txtPassword" value="#{MbLogin.usuarioLogueado.password}"  redisplay="true"
@@ -42,7 +42,7 @@
                 </div>            
                 <div class="ui-grid-row">
                     <div class="ui-grid-col-3">
-                        <p:outputLabel for="txtNombres" value="Nombres:" styleClass="etiquetaFormulario"/>
+                        <p:outputLabel for="txtNombres" value="Nombres:" styleClass="etiquetaFormularioAdministracion"/>
                     </div>
                     <div class="ui-grid-col-9">
                         <p:inputText id="txtNombres" value="#{MbLogin.usuarioLogueado.nombres}"  required="true" style="width: 90%;"/>
@@ -50,7 +50,7 @@
                 </div>
                 <div class="ui-grid-row">
                     <div class="ui-grid-col-3">
-                        <p:outputLabel for="txtApellidos" value="Apellidos:" styleClass="etiquetaFormulario"/>
+                        <p:outputLabel for="txtApellidos" value="Apellidos:" styleClass="etiquetaFormularioAdministracion"/>
                     </div>
                     <div class="ui-grid-col-9">
                         <p:inputText id="txtApellidos" value="#{MbLogin.usuarioLogueado.apellidos}" required="true" style="width: 90%;"/>
@@ -58,7 +58,7 @@
                 </div>
                 <div class="ui-grid-row">
                     <div class="ui-grid-col-3">
-                        <p:outputLabel for="txtCorreo" value="Correo:" styleClass="etiquetaFormulario"/>
+                        <p:outputLabel for="txtCorreo" value="Correo:" styleClass="etiquetaFormularioAdministracion"/>
                     </div>
                     <div class="ui-grid-col-9">
                         <p:inputText id="txtCorreo" value="#{MbLogin.usuarioLogueado.correo}" required="true"  style="width: 90%;"/>
@@ -66,7 +66,7 @@
                 </div>
                 <div class="ui-grid-row">
                     <div class="ui-grid-col-3">
-                        <p:outputLabel value="" styleClass="etiquetaFormulario"/>
+                        <p:outputLabel value="" styleClass="etiquetaFormularioAdministracion"/>
                     </div>
                     <div class="ui-grid-col-9">
                         <p:commandButton value="Actualizar" update="formCptFormUsuario:ccFormUsuarioId,#{ccLstUsuarioId}" 
