--- a/GrupoEmpresarial-war/web/interfaz/usuario/componente/cpt-formulario-usuario.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/usuario/componente/cpt-formulario-usuario.xhtml
@@ -18,7 +18,7 @@
         <div class="ui-grid ui-grid-responsive">
             <div class="ui-grid-row">
                 <div class="ui-grid-col-3">
-                    <p:outputLabel for="txtNickname" value="Usuario:" styleClass="etiquetaFormulario"/>
+                    <p:outputLabel for="txtNickname" value="Usuario:" styleClass="etiquetaFormularioAdministracion"/>
                 </div>
                 <div class="ui-grid-col-9">
                     <p:inputText id="txtNickname" value="#{MbAdministrarUsuario.usuarioSeleccionado.nickname}"  required="true" style="width: 90%;"/>        
@@ -26,7 +26,7 @@
             </div>
             <div class="ui-grid-row">
                 <div class="ui-grid-col-3">
-                    <p:outputLabel for="txtPassword" value="Contraseña:" styleClass="etiquetaFormulario"/>
+                    <p:outputLabel for="txtPassword" value="Contraseña:" styleClass="etiquetaFormularioAdministracion"/>
                 </div>
                 <div class="ui-grid-col-9">
                     <p:password id="txtPassword" value="#{MbAdministrarUsuario.usuarioSeleccionado.password}"  redisplay="true"
@@ -36,7 +36,7 @@
             </div>            
             <div class="ui-grid-row">
                 <div class="ui-grid-col-3">
-                    <p:outputLabel for="txtNombres" value="Nombres:" styleClass="etiquetaFormulario"/>
+                    <p:outputLabel for="txtNombres" value="Nombres:" styleClass="etiquetaFormularioAdministracion"/>
                 </div>
                 <div class="ui-grid-col-9">
                     <p:inputText id="txtNombres" value="#{MbAdministrarUsuario.usuarioSeleccionado.nombres}"  required="true" style="width: 90%;"/>        
@@ -44,7 +44,7 @@
             </div>
             <div class="ui-grid-row">
                 <div class="ui-grid-col-3">
-                    <p:outputLabel for="txtApellidos" value="Apellidos:" styleClass="etiquetaFormulario"/>
+                    <p:outputLabel for="txtApellidos" value="Apellidos:" styleClass="etiquetaFormularioAdministracion"/>
                 </div>
                 <div class="ui-grid-col-9">
                     <p:inputText id="txtApellidos" value="#{MbAdministrarUsuario.usuarioSeleccionado.apellidos}" required="true" style="width: 90%;"/>        
@@ -52,7 +52,7 @@
             </div>
             <div class="ui-grid-row">
                 <div class="ui-grid-col-3">
-                    <p:outputLabel for="txtCorreo" value="Correo:" styleClass="etiquetaFormulario"/>
+                    <p:outputLabel for="txtCorreo" value="Correo:" styleClass="etiquetaFormularioAdministracion"/>
                 </div>
                 <div class="ui-grid-col-9">
                     <p:inputText id="txtCorreo" value="#{MbAdministrarUsuario.usuarioSeleccionado.correo}" required="true"  style="width: 90%;"/>                    
@@ -60,7 +60,7 @@
             </div>
             <div class="ui-grid-row">
                 <div class="ui-grid-col-3">
-                    <p:outputLabel value="Perfil" styleClass="etiquetaFormulario"/>
+                    <p:outputLabel value="Perfil" styleClass="etiquetaFormularioAdministracion"/>
                 </div>
                 <div class="ui-grid-col-9">
                     <p:selectOneMenu id="ccCboUniSelePerfilId" converter="perfilConverter"
@@ -72,7 +72,7 @@
             </div>
             <div class="ui-grid-row">
                 <div class="ui-grid-col-3">
-                    <p:outputLabel for="txtIdGrupo" value="Grupo Empresarial:" styleClass="etiquetaFormulario"/>
+                    <p:outputLabel for="txtIdGrupo" value="Grupo Empresarial:" styleClass="etiquetaFormularioAdministracion"/>
                 </div>
                 <div class="ui-grid-col-9">
                     <p:inputText id="txtIdGrupo" value="#{MbAdministrarUsuario.usuarioSeleccionado.idIdentificacion}" required="true"  style="width: 90%;"/>                    
@@ -80,7 +80,7 @@
             </div>
             <div class="ui-grid-row">
                 <div class="ui-grid-col-3">
-                   <p:outputLabel value="" styleClass="etiquetaFormulario"/>
+                   <p:outputLabel value="" styleClass="etiquetaFormularioAdministracion"/>
                 </div>
                 <div class="ui-grid-col-9">
                     <p:commandButton value="Nuevo" update="formCptFormUsuario:ccFormUsuarioId,#{ccLstUsuarioId}" 
