--- a/GrupoEmpresarial-war/web/plantilla/plantilla.xhtml
+++ b/GrupoEmpresarial-war/web/plantilla/plantilla.xhtml
@@ -24,7 +24,7 @@
             <ui:debug/>
             <p:layout fullPage="true">
 
-                <p:layoutUnit position="north" size="100" resizable="true" closable="true" collapsible="true">
+                <p:layoutUnit position="north" size="100" closable="true" collapsible="false">
                     <ui:include src="encabezado.xhtml" />
                 </p:layoutUnit>
 
@@ -33,7 +33,7 @@
                     <ui:include src="menu.xhtml" />
                 </p:layoutUnit>
 
-                <p:layoutUnit position="center">
+                <p:layoutUnit id="contenedorCentral" position="center">
                     <ui:insert name="content" />
                 </p:layoutUnit>
 
